Data Fit update

--- a/DataFit/COVID19 Data Analysis.ipynb
+++ b/DataFit/COVID19 Data Analysis.ipynb
@@ -86,7 +86,7 @@
     "currentday = (currentdate - initdate).days\n",
     "\n",
     "\n",
-    "RM = ImportData(tstate = '13', initdate = initdate)\n",
+    "RM = ImportData(tstate = '14', initdate = initdate)\n",
     "\n",
     "RM.importdata()"
    ]
@@ -99,7 +99,7 @@
     {
      "data": {
       "text/plain": [
-       "8125072"
+       "405835"
       ]
      },
      "execution_count": 3,
@@ -142,19 +142,13 @@
     {
      "data": {
       "text/plain": [
-       "array([  73,   82,   90,  100,  109,  118,  141,  164,  191,  214,  235,\n",
-       "        259,  289,  320,  357,  391,  419,  460,  500,  539,  584,  623,\n",
-       "        666,  706,  753,  793,  836,  895,  949,  996, 1057, 1116, 1166,\n",
-       "       1209, 1254, 1287, 1338, 1390, 1444, 1482, 1520, 1563, 1603, 1636,\n",
-       "       1677, 1708, 1734, 1763, 1793, 1828, 1859, 1886, 1901, 1925, 1948,\n",
-       "       1975, 1994, 2012, 2037, 2046, 2066, 2072, 2084, 2101, 2122, 2134,\n",
-       "       2148, 2167, 2180, 2191, 2204, 2216, 2230, 2239, 2247, 2259, 2269,\n",
-       "       2278, 2287, 2298, 2309, 2313, 2331, 2345, 2357, 2368, 2374, 2384,\n",
-       "       2392, 2401, 2410, 2417, 2423, 2430, 2434, 2446, 2453, 2457, 2465,\n",
-       "       2477, 2484, 2489, 2499, 2509, 2516, 2520, 2537, 2546, 2556, 2562,\n",
-       "       2573, 2579, 2586, 2593, 2596, 2602, 2607, 2614, 2623, 2627, 2637,\n",
-       "       2644, 2647, 2656, 2667, 2672, 2678, 2683, 2689, 2693, 2697, 2701,\n",
-       "       2709, 2716, 2722, 2734, 2739, 2743, 2748])"
+       "array([3, 3, 3, 3, 3, 3, 3, 3, 3, 3, 3, 3, 3, 3, 3, 3, 3, 3, 3, 3, 3, 3,\n",
+       "       3, 3, 3, 3, 3, 3, 3, 3, 4, 4, 4, 4, 4, 4, 4, 4, 4, 4, 4, 4, 4, 4,\n",
+       "       4, 4, 4, 4, 4, 4, 4, 4, 4, 4, 4, 4, 4, 4, 4, 4, 4, 4, 4, 4, 4, 4,\n",
+       "       4, 4, 4, 4, 4, 4, 4, 4, 4, 4, 4, 4, 4, 4, 4, 4, 4, 4, 4, 4, 4, 4,\n",
+       "       4, 4, 4, 4, 4, 4, 4, 4, 4, 4, 4, 4, 4, 4, 4, 4, 4, 4, 4, 4, 4, 4,\n",
+       "       4, 4, 4, 4, 4, 4, 4, 4, 4, 4, 4, 4, 4, 4, 4, 4, 4, 4, 4, 4, 4, 4,\n",
+       "       4, 4, 4, 4, 4, 4, 5, 5, 5, 5, 5, 5, 5, 5])"
       ]
      },
      "execution_count": 5,
@@ -227,7 +221,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -236,9 +230,20 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 8,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "<matplotlib.legend.Legend at 0x7f213d0cd520>"
+      ]
+     },
+     "execution_count": 8,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "plt.plot(RM.sochimi_dates,RM.UTI,label='UTI')\n",
     "plt.plot(RM.sochimi_dates,UCI_VMI,label='UCI - VMI')\n",
@@ -248,9 +253,20 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 9,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "<matplotlib.legend.Legend at 0x7f213cdace20>"
+      ]
+     },
+     "execution_count": 9,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "plt.plot(RM.sochimi_tr,RM.VMI,label='VMI')\n",
     "plt.plot(RM.sochimi_tr,RM.VMI_tot,label='VMI_tot')\n",
@@ -262,9 +278,20 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 10,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "Text(0.5, 1.0, 'UCI vs UTI - RM')"
+      ]
+     },
+     "execution_count": 10,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "plt.plot(RM.sochimi_tr,RM.UTI,label='UTI', color = 'blue')\n",
     "plt.plot(RM.sochimi_tr,RM.UTI_tot,label='UTI_tot',linestyle = 'dashed', color = 'blue')\n",
@@ -379,7 +406,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 14,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -400,19 +427,47 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 28,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Importing General Data\n",
+      "Importing Population\n",
+      "Importing Active infected\n",
+      "Importing Accumulated Infected\n",
+      "Importing Daily Infected\n",
+      "Importing Sochimi Data 2\n",
+      "Importing Accumulated Deaths\n",
+      "Importing Active Infected by Minciencia\n",
+      "Importing Hospitalized/NonHospitalized Deaths\n",
+      "Done\n"
+     ]
+    }
+   ],
    "source": [
-    "PuntaArenas = ImportData(tstate = '12', initdate = initdate)\n",
+    "PuntaArenas = ImportData(tstate = '09', initdate = initdate)\n",
     "PuntaArenas.importdata()"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 12,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "<matplotlib.legend.Legend at 0x7f213cc90eb0>"
+      ]
+     },
+     "execution_count": 12,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "\n",
     "plt.plot(PuntaArenas.sochimi_dates,PuntaArenas.UTI,label='UTI', color = 'blue')\n",
@@ -427,9 +482,20 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 16,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "<matplotlib.legend.Legend at 0x7f213c7c2e80>"
+      ]
+     },
+     "execution_count": 16,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "fig, axs = plt.subplots(2, 3)\n",
     "\n",
@@ -481,7 +547,69 @@
     "axs[1,1].axvline(x = SPchange_date, linestyle = 'dotted',color = 'grey',label='Inicio Apertura')\n",
     "axs[1,1].axvline(x = fiestaspatrias, linestyle = 'dotted',color = 'red',label='18 Sept')\n",
     "axs[1,1].axvline(x = plebiscito, linestyle = 'dotted',color = 'blue',label='Plebiscito')\n",
-    "axs[1,1].legend(loc=0)\n"
+    "axs[1,1].legend(loc=0)\n",
+    "\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 30,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "Text(0.5, 0.98, 'Región de la Araucanía')"
+      ]
+     },
+     "execution_count": 30,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "fig, axs = plt.subplots(2, 2)\n",
+    "\n",
+    "#for i in range(len(simulation)):\n",
+    "#    axs[0,0].plot(dates[i],simulation[i].I_ac_det,label='RF: '+str(renewalFactor[i])+' | SP_R: '+str(round(100*SeroPrevalence[i],2))+'%'+' | SP_D:'+str(round(100*SeroPrevalenceDet[i],2))+'%',color=colors[i])\n",
+    "axs[0,0].set_title('Accumulated Infected')\n",
+    "axs[0,0].set_xlim(initdate,datetime(2020,12,31))\n",
+    "axs[0,0].scatter(PuntaArenas.I_ac_r_dates,PuntaArenas.I_ac_r)\n",
+    "#axs[0,0].axvline(x = SPchange_date, linestyle = 'dotted',color = 'grey',label='Inicio Apertura')\n",
+    "axs[0,0].axvline(x = fiestaspatrias, linestyle = 'dotted',color = 'red',label='18 Sept')\n",
+    "axs[0,0].axvline(x = plebiscito, linestyle = 'dotted',color = 'blue',label='Plebiscito')\n",
+    "axs[0,0].legend(loc=0)\n",
+    "\n",
+    "\n",
+    "axs[0,1].set_title('Hospitalized Accumulated Deaths')\n",
+    "axs[0,1].set_xlim(initdate,datetime(2020,12,31))\n",
+    "axs[0,1].scatter(PuntaArenas.Br_dates,PuntaArenas.Br,label='Muertes Totales')\n",
+    "#axs[0,1].axvline(x = SPchange_date, linestyle = 'dotted',color = 'grey',label='Inicio Apertura')\n",
+    "axs[0,1].axvline(x = fiestaspatrias, linestyle = 'dotted',color = 'red',label='18 Sept')\n",
+    "axs[0,1].axvline(x = plebiscito, linestyle = 'dotted',color = 'blue',label='Plebiscito')\n",
+    "axs[0,1].legend(loc=0)\n",
+    "\n",
+    "#for i in range(len(simulation)):\n",
+    "#    axs[0,0].plot(dates[i],simulation[i].I_ac_det,label='RF: '+str(renewalFactor[i])+' | SP_R: '+str(round(100*SeroPrevalence[i],2))+'%'+' | SP_D:'+str(round(100*SeroPrevalenceDet[i],2))+'%',color=colors[i])\n",
+    "axs[1,0].set_title('Daily new Infected')\n",
+    "axs[1,0].set_xlim(initdate,datetime(2020,12,31))\n",
+    "axs[1,0].scatter(PuntaArenas.I_d_r_dates,PuntaArenas.I_d_r)\n",
+    "#axs[1,0].axvline(x = SPchange_date, linestyle = 'dotted',color = 'grey',label='Inicio Apertura')\n",
+    "axs[1,0].axvline(x = fiestaspatrias, linestyle = 'dotted',color = 'red',label='18 Sept')\n",
+    "axs[1,0].axvline(x = plebiscito, linestyle = 'dotted',color = 'blue',label='Plebiscito')\n",
+    "axs[1,0].legend(loc=0)\n",
+    "\n",
+    "\n",
+    "axs[1,1].set_title('VMI')\n",
+    "axs[1,1].set_xlim(initdate,datetime(2020,12,31))\n",
+    "axs[1,1].scatter(PuntaArenas.sochimi_dates,PuntaArenas.Vr,label='VMI Usage')\n",
+    "axs[1,1].scatter(PuntaArenas.sochimi_dates,PuntaArenas.Vr_tot,label='VMI Capacity')\n",
+    "#axs[1,1].axvline(x = SPchange_date, linestyle = 'dotted',color = 'grey',label='Inicio Apertura')\n",
+    "axs[1,1].axvline(x = fiestaspatrias, linestyle = 'dotted',color = 'red',label='18 Sept')\n",
+    "axs[1,1].axvline(x = plebiscito, linestyle = 'dotted',color = 'blue',label='Plebiscito')\n",
+    "axs[1,1].legend(loc=0)\n",
+    "\n",
+    "fig.suptitle('Región de la Araucanía', fontsize=16)"
    ]
   },
   {
@@ -1845,7 +1973,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.8.2"
+   "version": "3.8.5"
   }
  },
  "nbformat": 4,
