--- a/DataFit/DataFit_PuntaArenas.ipynb
+++ b/DataFit/DataFit_PuntaArenas.ipynb
@@ -9,7 +9,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [
     {
@@ -58,7 +58,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -79,7 +79,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [
     {
@@ -113,16 +113,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 38,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "<matplotlib.legend.Legend at 0x7f72a64ca0a0>"
+       "<matplotlib.legend.Legend at 0x7fe9426b9e20>"
       ]
      },
-     "execution_count": 38,
+     "execution_count": 8,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -190,7 +190,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -201,16 +201,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 10,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "[<matplotlib.lines.Line2D at 0x7f72a74a5160>]"
+       "[<matplotlib.lines.Line2D at 0x7fe9427156d0>]"
       ]
      },
-     "execution_count": 11,
+     "execution_count": 10,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -235,7 +235,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 11,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -246,16 +246,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 12,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "[<matplotlib.lines.Line2D at 0x7f72a6a802e0>]"
+       "[<matplotlib.lines.Line2D at 0x7fe93d281be0>]"
       ]
      },
-     "execution_count": 13,
+     "execution_count": 12,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -280,7 +280,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 85,
+   "execution_count": 13,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -297,7 +297,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 86,
+   "execution_count": 14,
    "metadata": {},
    "outputs": [
     {
@@ -314,16 +314,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 87,
+   "execution_count": 15,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "<matplotlib.collections.PathCollection at 0x7f72a5ea6f40>"
+       "<matplotlib.collections.PathCollection at 0x7fe9425a1040>"
       ]
      },
-     "execution_count": 87,
+     "execution_count": 15,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -335,7 +335,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 88,
+   "execution_count": 16,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -345,9 +345,21 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 89,
+   "execution_count": 27,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "ename": "AttributeError",
+     "evalue": "'numpy.ndarray' object has no attribute 'loc'",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[0;31mAttributeError\u001b[0m                            Traceback (most recent call last)",
+      "\u001b[0;32m<ipython-input-27-8ffc8468fd75>\u001b[0m in \u001b[0;36m<module>\u001b[0;34m\u001b[0m\n\u001b[0;32m----> 1\u001b[0;31m \u001b[0mDr_hosp\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0maux\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mloc\u001b[0m\u001b[0;34m[\u001b[0m\u001b[0;34m'fromHospital'\u001b[0m\u001b[0;34m]\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m\u001b[1;32m      2\u001b[0m \u001b[0mDr_Nonhosp\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0maux\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mloc\u001b[0m\u001b[0;34m[\u001b[0m\u001b[0;34m'notFromHospital'\u001b[0m\u001b[0;34m]\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m      3\u001b[0m \u001b[0mhosp_dates\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0;34m[\u001b[0m\u001b[0mdatetime\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mstrptime\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0maux\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mloc\u001b[0m\u001b[0;34m[\u001b[0m\u001b[0;34m'dates'\u001b[0m\u001b[0;34m]\u001b[0m\u001b[0;34m[\u001b[0m\u001b[0mi\u001b[0m\u001b[0;34m]\u001b[0m\u001b[0;34m[\u001b[0m\u001b[0;34m:\u001b[0m\u001b[0;36m10\u001b[0m\u001b[0;34m]\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0;34m'%Y-%m-%d'\u001b[0m\u001b[0;34m)\u001b[0m \u001b[0;32mfor\u001b[0m \u001b[0mi\u001b[0m \u001b[0;32min\u001b[0m \u001b[0mrange\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mlen\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mDr_Nonhosp\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m]\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m      4\u001b[0m \u001b[0mBr_hosp\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0mnp\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mcumsum\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mDr_hosp\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m      5\u001b[0m \u001b[0mBr_Nonhosp\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0mnp\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mcumsum\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mDr_Nonhosp\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n",
+      "\u001b[0;31mAttributeError\u001b[0m: 'numpy.ndarray' object has no attribute 'loc'"
+     ]
+    }
+   ],
    "source": [
     " \n",
     "        Dr_hosp = aux.loc['fromHospital']\n",
@@ -379,7 +391,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 90,
+   "execution_count": 18,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -390,16 +402,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 91,
+   "execution_count": 19,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "39"
+       "40"
       ]
      },
-     "execution_count": 91,
+     "execution_count": 19,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -410,7 +422,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 92,
+   "execution_count": 20,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -419,16 +431,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 93,
+   "execution_count": 21,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "136"
+       "140"
       ]
      },
-     "execution_count": 93,
+     "execution_count": 21,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -439,16 +451,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 84,
+   "execution_count": 26,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "<matplotlib.collections.PathCollection at 0x7f72a5ecb4c0>"
+       "<matplotlib.collections.PathCollection at 0x7fe942564370>"
       ]
      },
-     "execution_count": 84,
+     "execution_count": 26,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -461,7 +473,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 54,
+   "execution_count": 23,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -471,7 +483,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 79,
+   "execution_count": 24,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -481,18 +493,87 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 80,
+   "execution_count": 25,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "39"
+       "40"
       ]
      },
-     "execution_count": 80,
+     "execution_count": 25,
      "metadata": {},
      "output_type": "execute_result"
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "Exception in Tkinter callback\n",
+      "Traceback (most recent call last):\n",
+      "  File \"/usr/lib/python3.8/tkinter/__init__.py\", line 1883, in __call__\n",
+      "    return self.func(*args)\n",
+      "  File \"/usr/lib/python3.8/tkinter/__init__.py\", line 804, in callit\n",
+      "    func(*args)\n",
+      "  File \"/home/samuel/.local/lib/python3.8/site-packages/matplotlib/backends/_backend_tk.py\", line 270, in idle_draw\n",
+      "    self.draw()\n",
+      "  File \"/home/samuel/.local/lib/python3.8/site-packages/matplotlib/backends/backend_tkagg.py\", line 9, in draw\n",
+      "    super(FigureCanvasTkAgg, self).draw()\n",
+      "  File \"/home/samuel/.local/lib/python3.8/site-packages/matplotlib/backends/backend_agg.py\", line 393, in draw\n",
+      "    self.figure.draw(self.renderer)\n",
+      "  File \"/home/samuel/.local/lib/python3.8/site-packages/matplotlib/artist.py\", line 38, in draw_wrapper\n",
+      "    return draw(artist, renderer, *args, **kwargs)\n",
+      "  File \"/home/samuel/.local/lib/python3.8/site-packages/matplotlib/figure.py\", line 1735, in draw\n",
+      "    mimage._draw_list_compositing_images(\n",
+      "  File \"/home/samuel/.local/lib/python3.8/site-packages/matplotlib/image.py\", line 137, in _draw_list_compositing_images\n",
+      "    a.draw(renderer)\n",
+      "  File \"/home/samuel/.local/lib/python3.8/site-packages/matplotlib/artist.py\", line 38, in draw_wrapper\n",
+      "    return draw(artist, renderer, *args, **kwargs)\n",
+      "  File \"/home/samuel/.local/lib/python3.8/site-packages/matplotlib/axes/_base.py\", line 2630, in draw\n",
+      "    mimage._draw_list_compositing_images(renderer, self, artists)\n",
+      "  File \"/home/samuel/.local/lib/python3.8/site-packages/matplotlib/image.py\", line 137, in _draw_list_compositing_images\n",
+      "    a.draw(renderer)\n",
+      "  File \"/home/samuel/.local/lib/python3.8/site-packages/matplotlib/artist.py\", line 38, in draw_wrapper\n",
+      "    return draw(artist, renderer, *args, **kwargs)\n",
+      "  File \"/home/samuel/.local/lib/python3.8/site-packages/matplotlib/axis.py\", line 1227, in draw\n",
+      "    ticks_to_draw = self._update_ticks()\n",
+      "  File \"/home/samuel/.local/lib/python3.8/site-packages/matplotlib/axis.py\", line 1103, in _update_ticks\n",
+      "    major_locs = self.get_majorticklocs()\n",
+      "  File \"/home/samuel/.local/lib/python3.8/site-packages/matplotlib/axis.py\", line 1348, in get_majorticklocs\n",
+      "    return self.major.locator()\n",
+      "  File \"/home/samuel/.local/lib/python3.8/site-packages/matplotlib/dates.py\", line 1338, in __call__\n",
+      "    self.refresh()\n",
+      "  File \"/home/samuel/.local/lib/python3.8/site-packages/matplotlib/dates.py\", line 1364, in refresh\n",
+      "    dmin, dmax = self.viewlim_to_dt()\n",
+      "  File \"/home/samuel/.local/lib/python3.8/site-packages/matplotlib/dates.py\", line 1094, in viewlim_to_dt\n",
+      "    raise ValueError('view limit minimum {} is less than 1 and '\n",
+      "ValueError: view limit minimum -36885.000000000124 is less than 1 and is an invalid Matplotlib date value. This often happens if you pass a non-datetime value to an axis that has datetime units\n",
+      "Traceback (most recent call last):\n",
+      "  File \"/home/samuel/.local/lib/python3.8/site-packages/matplotlib/cbook/__init__.py\", line 196, in process\n",
+      "    func(*args, **kwargs)\n",
+      "  File \"/home/samuel/.local/lib/python3.8/site-packages/matplotlib/backend_bases.py\", line 1680, in pick\n",
+      "    self.figure.pick(mouseevent)\n",
+      "  File \"/home/samuel/.local/lib/python3.8/site-packages/matplotlib/artist.py\", line 516, in pick\n",
+      "    a.pick(mouseevent)\n",
+      "  File \"/home/samuel/.local/lib/python3.8/site-packages/matplotlib/artist.py\", line 516, in pick\n",
+      "    a.pick(mouseevent)\n",
+      "  File \"/home/samuel/.local/lib/python3.8/site-packages/matplotlib/artist.py\", line 505, in pick\n",
+      "    for a in self.get_children():\n",
+      "  File \"/home/samuel/.local/lib/python3.8/site-packages/matplotlib/axis.py\", line 839, in get_children\n",
+      "    *self.get_major_ticks(), *self.get_minor_ticks()]\n",
+      "  File \"/home/samuel/.local/lib/python3.8/site-packages/matplotlib/axis.py\", line 1431, in get_major_ticks\n",
+      "    numticks = len(self.get_majorticklocs())\n",
+      "  File \"/home/samuel/.local/lib/python3.8/site-packages/matplotlib/axis.py\", line 1348, in get_majorticklocs\n",
+      "    return self.major.locator()\n",
+      "  File \"/home/samuel/.local/lib/python3.8/site-packages/matplotlib/dates.py\", line 1338, in __call__\n",
+      "    self.refresh()\n",
+      "  File \"/home/samuel/.local/lib/python3.8/site-packages/matplotlib/dates.py\", line 1364, in refresh\n",
+      "    dmin, dmax = self.viewlim_to_dt()\n",
+      "  File \"/home/samuel/.local/lib/python3.8/site-packages/matplotlib/dates.py\", line 1094, in viewlim_to_dt\n",
+      "    raise ValueError('view limit minimum {} is less than 1 and '\n",
+      "ValueError: view limit minimum -36885.000000000124 is less than 1 and is an invalid Matplotlib date value. This often happens if you pass a non-datetime value to an axis that has datetime units\n"
+     ]
     }
    ],
    "source": [
